<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">zdqcStu</string>
    <string name="app_display_name">学生端app</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="again_to_exit">再按一次返回键退出</string>
    <string name="back_string">返回</string>
    <string name="bottommenu_index">推荐</string>
    <string name="bottommenu_work">任务</string>
    <string name="bottommenu_create">创新创业</string>
    <string name="bottommenu_mine">我的</string>
    <string name="today_format">HH:mm</string>
    <string name="yesterday_format">昨天</string>
    <string name="date_format">yy/MM/dd</string>
    <string name="talk_today_format">HH:mm</string>
    <string name="talk_yesterday_format">昨天 HH:mm</string>
    <string name="talk_date_format">yy/MM/dd HH:mm</string>
    <string name="scan_desc_string">将二维码放入方框扫描</string>
    <string name="scan_title_string">扫描</string>
    <string name="cancel">取消</string>
    <string name="network_error">网络连接失败，请检查网络</string>
    <string name="no_info">未知数据</string>

    <!-- dialog提示信息 -->
    <string name="alert_complete">已完成</string>
    <string name="alert_loading">加载中</string>
    <string name="alert_telephone_exist">手机号已被注册请登录</string>
    <string name="alert_telephone_empty">手机号为空</string>
    <string name="alert_user_pwd_empty">用户名或密码不能为空</string>
    <string name="alert_pwd_noequal">密码输入不一致</string>
    <string name="alert_no_empty">请输入有效值</string>
    <string name="alert_valicode_noeffect">验证码已失效</string>

     <string name="alert_title">版本提示</string>
      <string name="alert_content">检查到有新版本，是否更新？</string>
       <string name="alert_cancer">稍后再说</string>
       <string name="alert_confirm">立即更新</string>
    
    <!-- Header信息 -->
    <string name="header_forget_pwd">忘记密码</string>
    <string name="header_resetting_pwd">重置密码</string>

    <string name="no_login">您尚未登录，请先登录</string>
    
    <!-- 登录信息 -->
    <string name="user_name_hint">请输入电话号码/用户名</string>
    <string name="user_pwd_hint">请输入密码</string>
    <string name="user_remember_pwd">记住密码</string>
    <string name="user_login">登录</string>
    <string name="user_login_other">第三方登录</string>
    <string name="user_login_QQ">QQ</string>
    <string name="user_login_weixin">微信</string>
    <string name="user_login_xinlan">新浪</string>
    <string name="user_forget_pwd">忘记密码？</string>
    <string name="user_register_forward">注册</string>

    <!-- 注册信息 -->
    <string name="user_register">注册</string>
    <string name="user_register_new">新用户注册</string>
    <string name="user_register_success">注册成功</string>
    <string name="sms_send_code">发送验证码</string>
    <string name="sms_send_code_hint">请输入验证码</string>
    <string name="user_register_phone_hint">请输入你的手机号</string>
    <string name="user_register_setting_pwd">请设置你的密码</string>
    <string name="user_register_confirm_pwd">请确认你的密码</string>

    <!-- 忘记密码 -->
    <string name="forget_pwd_step_next">下一步</string>
    <string name="forget_pwd_complete">完成</string>
    <string name="forget_resetting_pwd_hint">请设置新密码</string>
    <string name="forget_comfirm_pwd_hint">请确认新密码</string>

    <!-- 实名认证 -->
    <string name="certificate_header_title">实名认证</string>
    <string name="certificate_name">身份证姓名</string>
    <string name="certificate_no">身份证号码</string>
    <string name="certificate_stu_no">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="certificate_school">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;校</string>
    <string name="certificate_major">专&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;业</string>
    <string name="certificate_grade">级&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="certificate_school_date">入&#160;学&#160;年&#160;份&#160;</string>
    <string name="certificate_email">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱</string>
    <string name="certificate_photo_add">上传本人与学生证合照</string>
    <string name="certificate_photo">本人与学生证合照</string>
    <string name="certificate_care">学生证照片请确保字迹清晰，无遮挡，如下图：</string>
    <string name="certificate_submit">提交</string>
    <string name="certificate_name_hint">例如：张三</string>
    <string name="certificate_no_hint">例如：410415199012022100</string>
    <string name="certificate_stu_no_hint">例如：20157770226</string>
    <string name="certificate_school_hint">例如：郑州大学</string>
    <string name="certificate_major_hint">例如：计算机科学与技术</string>
    <string name="certificate_email_hint">例如：20112665@qq.com</string>
    <string name="certificate_result_info">你已成功发送实名认证请求\n我们会在2~5个工作日进行审核</string>
    <string name="certificate_result_info2">你已成功发送实名认证请求 我们会在2~5个工作日进行审核</string>
    <string name="certificate_result_submit">确定</string>
    <string name="certificate_cancer">跳过</string>

    <!-- popwindow -->
    <string name="certificate_popwindow_camera">拍照</string>
    <string name="certificate_popwindow_photos">从相册中选择</string>
    <string name="certificate_popwindow_cancer">取消</string>
    <string name="certificate_popwindow_error">你的认证审核未通过，请再次填写并提交。</string>

    <!-- 我的 -->
    <string name="mine_worked">报名中任务</string>
    <string name="mine_working">进行中任务</string>
    <string name="mine_work_over">已结束任务</string>
    <string name="mine_submit_position">已投递职位</string>
    <string name="mine_innovation">我的创新创业</string>
    <string name="mine_message">消息</string>
    <string name="mine_money">提现</string>
    <string name="mine_setting">设置</string>
    <string name="mine_help">帮助与反馈</string>
    <string name="mine_header_title">个人信息</string>
    <string name="mine_certification">实名认证</string>
    <string name="mine_basic_info">基本信息</string>
    <string name="mine_contact_info">联系信息</string>
    <string name="mine_onSchool">在校信息</string>
    <string name="mine_platform_info">平台信息</string>
    <string name="mine_resume">我的简历</string>
    <string name="mine_email_title">请输入新E-mail并提交</string>
    <string name="mine_email_hint"> 请输入新E-mail</string>
    <string name="mine_phone_hint"> 请输入新手机号</string>
    <string name="mine_modify_phone">修改手机号</string>
    <string name="mine_modify_email">修改E-mail</string>
    <string name="mine_save">保存</string>
    <string name="mine_user_say">个人说明</string>
    <string name="mine_user_say_alert">请输入个人说明</string>
    <string name="mine_user_setting">设置</string>
    <string name="mine_user_account">原&#160;&#160;密&#160;码</string>
    <string name="mine_user_pwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="mine_user_pwd_confirm">确认密码</string>
    <string name="mine_user_pwd_title">请设置新的登录密码</string>
     <string name="mine_user_oldpwd_hint">请输入原密码</string>
      <string name="mine_user_newpwd_hint">请输入新密码</string>
      <string name="mine_user_renewpwd_hint">请重新输入新密码</string>
       <string name="mine_user_modify_pwd_header">修改密码</string>
      
    <!-- 任务 -->
    <string name="work_title">任务</string>
    <string name="work_enterprise">企业</string>
    <string name="work_detail_title">任务详情</string>
    <string name="work_comment_title">对项目评论</string>
    <string name="work_publish_person">发布者：</string>
    <string name="work_publish_date">时间：</string>
    <string name="work_publish_introduction">任务内容简介：</string>
    <string name="work_publish_enable_request">任务能力要求：</string>
    <string name="work_publish_file">附件：</string>
    <string name="work_publish_seeAll">查看全部</string>
    <string name="work_exit">申请退出</string>
    <string name="work_ready">准备</string>
    <string name="work_infile">归档</string>
    <string name="work_progress">进度</string>
    <string name="work_apply">任务申请</string>
    <string name="work_begin">开始项目</string>
    <string name="work_comment">评论项目</string>
    <string name="work_comment_header">发表评论</string>
    <string name="work_comment_title">评分评价</string>
    <string name="work_comment_hint">说点什么...</string>
    <string name="work_comment_submit">评价</string>
    <string name="work_history">以往所有项目</string>
    <string name="work_apply_content">确定要申请此任务吗？？？</string>
    <string name="work_exit_content">确定要申请退出此任务吗？？？</string>
    <string name="work_ready_content">确定要准备此任务吗？准备后不可以退出</string>
    <string name="work_infile_content">确定要归档此任务吗？</string>

    <!-- 推荐 -->
    <string name="index_title_part_sign">兼职</string>
    <string name="index_title_pull_sign">全职</string>
    <string name="index_submit_resume">投递简历</string>
    
    <!-- 双创 -->
    <string name="innovation_publish_title">发布</string>
    <string name="innovation_publish_step">发布创新创业</string>
    <string name="innovation_detail_title">双创详情</string>
    <string name="innovation_publish_title_hint">请输入发布的标题</string>
    <string name="innovation_publish_content_hint">请简要说明</string>
    <string name="innovation_send_limit">推送范围</string>
    <string name="innovation_send_student_limit">推送学生范围</string>
     <string name="innovation_send_enterprise_limit">推送企业范围</string>
    <string name="innovation_school_check">学校选择</string>
    <string name="innovation_school_already">已选学校</string>
    <string name="innovation_major_check">专业选择</string>
    <string name="innovation_major_already">已选专业</string>
    <string name="innovation_grade_check">级别选择</string>
    <string name="innovation_grade_already">已选级别</string>
    <string name="innovation_agree_info">觉得不错，赞一个</string>
    <string name="innovation_enterprise_info">行业选择</string>
    <string name="innovation_full_title">全职详情</string>
    <string name="innovation_part_title">兼职详情</string>
     <string name="innovation_school_add">添加</string>
    <!--发布者信息  -->
    <string name="innovation_school_address">所在学校</string>
      <string name="innovation_school_no">学号</string>
     <string name="innovation_school_date">入学年份</string>
       <string name="innovation_sex">性别</string>
         <string name="innovation_phone">手机号码</string>
        <string name="innovation_major">所学专业</string>
        <string name="innovation_history_comment">以往所有项目评价</string>
</resources>