<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        layout="@layout/register_bar" />

    <EditText
        android:id="@+id/et_publistTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/tvMoneyStyle"
        android:hint="@string/innovation_publish_title_hint" 
        android:background="@null"/>

    <include
        layout="@layout/line_view" />

    <EditText
        android:id="@+id/et_publistContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="10dp"
        android:gravity="top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/innovation_publish_content_hint"
        android:background="@null"
        android:maxLines="10"
         style="@style/tvMoneyStyle" />

    <include
        layout="@layout/line_view" />

    <TextView
        android:id="@+id/tv_publish_Step"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/user_login_btn"
        android:text="@string/forget_pwd_step_next"
        android:layout_gravity="bottom"/>
</LinearLayout>