<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        layout="@layout/register_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        style="@style/tv_comment_title"
        android:text="@string/work_comment_title" />

    <RatingBar
        android:id="@+id/ratingBarComment"
        style="@style/RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1" />

    <EditText
        android:id="@+id/etCommentContent"
        android:background="@drawable/et_bord_style"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/tvCommentHint"
        android:gravity="top"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:hint="@string/work_comment_hint">
    </EditText>

    <TextView
        android:id="@+id/tvWorkComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_comment_submit" 
        android:background="@drawable/work_comment_btn"
        style="@style/tvCommentSubmit"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

</LinearLayout>