<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <include 
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        layout="@layout/register_bar"/>
    
    <LinearLayout
        android:id="@+id/li_resettingPwd"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/password_icon" />

        <EditText
            android:id="@+id/et_resettingPwd"
            style="@style/editStyle"
             android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/forget_resetting_pwd_hint"
            android:inputType="phone"
            android:singleLine="true">
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/line" />

   <LinearLayout
        android:id="@+id/li_confirmPwd"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_icon" />

        <EditText
            android:id="@+id/et_confirmPwd"
            style="@style/editStyle"
             android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/forget_comfirm_pwd_hint"
            android:inputType="phone"
            android:singleLine="true">
        </EditText>
    </LinearLayout>

     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/line" />

     <TextView
        android:id="@+id/tv_Comfirm"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/user_login_btn"
        android:text="@string/forget_pwd_complete" />
    
</LinearLayout>
